<resources>
    <string name="app_name">Quiz</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_login">LOGIN</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="selectSpinner">"Select a category:"</string>
    <string name="startQuiz">"START QUIZ"</string>
    <string name="back">"BACK"</string>
    <string name="next">"NEXT QUESTION"</string>
    <string name="prev">"PREV QUESTION"</string>
    <string name="submit">"SUBMIT"</string>
</resources>
